src/pages/download/download.css
.page-single__download-result-image {
  margin-bottom: 3.5rem;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  text-align: center;
}

.page-single__download-actions {
  margin-bottom: 2rem;
}

.page-single__download-actions button {
  width: 16rem;
  height: 4.4rem;
}

.page-single__download-actions button * {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.4rem;
  text-align: center;
}

.page-single__download-actions > *:not(:last-child) {
  margin-right: 2rem;
}

.machine-info-text {
  margin-bottom: 1rem;
}

